syntax = "proto3";
import "pkg/terrarium/module.proto";
option go_package = "github.com/terrariumcloud/terrarium-grpc-gateway/internal/services";
package terrarium.services.module;

service DependencyResolver {
  rpc RegisterModuleDependencies(terrarium.module.RegisterModuleDependenciesRequest) returns (terrarium.module.TransactionStatusResponse) {}
  rpc RegisterContainerDependencies(terrarium.module.RegisterContainerDependenciesRequest) returns (terrarium.module.TransactionStatusResponse) {}
  rpc RetrieveContainerDependencies(terrarium.module.RetrieveContainerDependenciesRequest) returns (stream terrarium.module.ContainerDependenciesResponse) {}
  rpc RetrieveModuleDependencies(terrarium.module.RetrieveModuleDependenciesRequest) returns (stream terrarium.module.ModuleDependenciesResponse) {}
}