syntax = "proto3";
import "pkg/terrarium/module.proto";
option go_package = "github.com/terrariumcloud/terrarium-grpc-gateway/internal/services";
package terrarium.services.module;

service Storage {
  rpc UploadSourceZip (stream terrarium.module.UploadSourceZipChunkRequest) returns (terrarium.module.TransactionStatusResponse) {}
  rpc DownloadSourceZip(terrarium.module.DownloadSourceZipRequest) returns (stream terrarium.module.SourceZipChunkResponse) {}
}